included search bar

--- a/src/assets/sass/layout/_hero.scss
+++ b/src/assets/sass/layout/_hero.scss
@@ -16,6 +16,7 @@
 .hero-browser-inner {
   position: relative; /* To display bubbles below the browser */
 
+  .content,
   img {
     width: 100%;
     height: auto;
