--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -46,6 +46,11 @@
 @import 'components/icons';
 
 /*--------------------------------------------------------------
+# Search
+--------------------------------------------------------------*/
+@import 'components/search';
+
+/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 @import 'layout/header';
