added sample listing

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -36,6 +36,11 @@
 @import 'components/forms';
 
 /*--------------------------------------------------------------
+# content
+--------------------------------------------------------------*/
+@import 'components/content';
+
+/*--------------------------------------------------------------
 # Buttons
 --------------------------------------------------------------*/
 @import 'components/buttons';
