--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -14,7 +14,7 @@
       @include shadow;
       width: 300px;
       height: 50px;
-      background: #eaeaea;
+      background: #f6f8fa;
       border: none;
       font-size: 10pt;
       float: left;
