--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -56,6 +56,11 @@
 @import 'components/search';
 
 /*--------------------------------------------------------------
+# Toggle
+--------------------------------------------------------------*/
+@import 'components/toggle';
+
+/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 @import 'layout/header';
