--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -61,6 +61,18 @@
 @import 'components/toggle';
 
 /*--------------------------------------------------------------
+# ScrollTop
+--------------------------------------------------------------*/
+@import 'components/scrollTop';
+
+/*--------------------------------------------------------------
+
+/*--------------------------------------------------------------
+# Listing
+--------------------------------------------------------------*/
+@import 'components/listing';
+
+/*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 @import 'layout/header';
