added rss icon and copying functionality

--- a/src/assets/sass/components/_content.scss
+++ b/src/assets/sass/components/_content.scss
@@ -67,6 +67,10 @@ ul.feed li i {
   float: left;
   line-height: 34px;
   margin-left: 5px;
+
+  &.right {
+    float: right;
+  }
 }
 
 @media (max-width: 767px) {
