added toaster styles

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -46,6 +46,11 @@
 @import 'components/buttons';
 
 /*--------------------------------------------------------------
+# Toast
+--------------------------------------------------------------*/
+@import 'components/toast';
+
+/*--------------------------------------------------------------
 # Icons
 --------------------------------------------------------------*/
 @import 'components/icons';
